syntax = "proto3";
package employee;
message Employee {
  int32 id = 1;
  int32 staffNumber = 2;
  string firstName = 3;
  string lastName = 4;
  float salary = 5;
}

message getAllRequest {}
message getAllResponse {}
message getStaffNumberRequest {
  int32 staffNumber =1;
}
message getStaffNumberResponse {
  int32 staffNumber =1;
}
message employeeRequest {
  Employee employee = 1;
}
message employeeResponse {
  Employee employee =1;
}

service EmployeeService {
  rpc getByStaffNumber (getStaffNumberRequest) returns (getStaffNumberResponse);
  rpc getEmployees (getAllRequest) returns (getAllResponse);
  rpc createEmployees (employeeRequest) returns (employeeResponse);
}